# makefile-ng

./: .gitignore  .travis.yml  LICENSE  README.md  makefile-ng.cabal
src/: Test.hs
src/Data/: Makefile.hs
src/Data/Makefile/: Parse.hs
src/Data/Makefile/Parse/: Internal.hs
