name:                makefile-ng
version:             0.0.1
homepage:            http://github.com/erwo42/makefile-ng
license:             MIT
license-file:        LICENSE
author:              Eric Wolf
maintainer:          ericwolf42@gmail.com
copyright:           2017 Eric Wolf
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base         >= 4.7 && < 5
                      , attoparsec
                      , text
  other-modules:       Data.Makefile.Parse.Internal
  ghc-options:        -Wall -fwarn-tabs
